# gz-transport

./: .bazelrc  .gitignore  .hgignore  BUILD.bazel  CMakeLists.txt  Changelog.md  INSTALL_WIN32.md  INSTALL_WINDOWS.md  MODULE.bazel  Migration.md  README.md  api.md.in  bitbucket-pipelines.yml  configure.bat  package.xml  tutorials.md.in
conf/: CMakeLists.txt  gz_zenoh_router_config.json5  gz_zenoh_session_config.json5  node_config.json5  transport.yaml  transport.yaml.in
example/: CMakeLists.txt  Optitrack.cc  Optitrack.hh  README.md  RequesterOneway.cc  ResponserOneway.cc  SrvProviderOneway.cc  basic_requester.cc  basic_responser.cc  bench.cc  cli.c  configure.bat  custom_query.cc  latency.gp  multipublisher.cc  optitrackListener.cc  playback.cc  publisher.cc  publisher_c.cc  publisher_c_fast.cc  publisher_custom_msg.cc  publisher_raw.cc  record.cc  requester.cc  requesterBenchmark.cc  requester_async.cc  requester_async_no_input.cc  requester_async_without_input.cc  requester_no_input.cc  requester_oneway.cc  requester_raw.cc  requester_without_input.cc  responser.cc  responserBenchmark.cc  responser_no_input.cc  responser_oneway.cc  responser_without_input.cc  subscriber.cc  subscriber_c.cc  subscriber_c_slow.cc  (+7 more)
example/benchmark/: CMakeLists.txt  README.md  bench.cc  plot_benchmark.py  plot_shm_benchmark.py  run_benchmark.py  run_shm_benchmark.py
example/cmake/: FindZeroMQ.cmake
example/data/14-11-2017-benchmarks/: latency-interprocess.data  latency-intraprocess.data  latency-wireless.data  throughput-interprocess.data  (+2 more)
example/msg/: CMakeLists.txt  benchmark.proto  int.proto  stringmsg.proto
example/msgs/: CMakeLists.txt  int.proto  stringmsg.proto  stringmsg2.proto
example/multi-version/: CMakeLists.txt
example/plotjuggler/: CMakeLists.txt  README.md  gz_pj_bridge.cc
example/zenoh/: CMakeLists.txt  zenoh_echo.cc
log/: BUILD.bazel  CMakeLists.txt
log/example/: CMakeLists.txt  custom_query.cc  playback.cc  record.cc
log/sql/: 0.1.0.sql
log/src/: Batch.cc  BatchPrivate.hh  Batch_TEST.cc  CMakeLists.txt  Console.cc  Console.hh  Descriptor.cc  Descriptor.hh  Descriptor_TEST.cc  Log.cc  LogCommandAPI.cc  LogCommandAPI_TEST.cc  Log_TEST.cc  Message.cc  Message_TEST.cc  MsgIter.cc  MsgIterPrivate.hh  Playback.cc  Playback.cc.orig  Playback_TEST.cc  QualifiedTime.cc  QualifiedTime_TEST.cc  QueryOptions.cc  QueryOptions_TEST.cc  Record.cc  Record_TEST.cc  Recorder.cc  Recorder_TEST.cc  SqlStatement.cc  SqlStatement_TEST.cc  build_config.hh.in  raii-sqlite3.cc  raii-sqlite3.hh
log/test/: BUILD.bazel  CMakeLists.txt  test_config.h.in  test_config.hh.in
msgs/: CMakeLists.txt  empty.proto  ign_int.proto  ign_string.proto  ign_vector3d.proto  int.proto  packet.proto  publisher.proto  string.proto  stringmsg.proto  vector3d.proto
msgs/cpp/: CMakeLists.txt  String.pb.cc  String.pb.h
msgs/generator/: IgnGenerator.cc  IgnGenerator.hh  ign_generator.cc
msgs/proto/: CMakeLists.txt  String.proto
parameters/: BUILD.bazel
parameters/src/: CMakeLists.txt  Client.cc  Client_TEST.cc  Registry.cc  Registry_TEST.cc  Utils.cc  Utils.hh  Utils_TEST.cc  errors.cc  result.cc  result_TEST.cc
proto/: CMakeLists.txt
python/: CMakeLists.txt  __init__.py
python/examples/: data_race_with_mutex.py  data_race_without_mutex.py  multi_lrauv_race.py  publisher.py  requester.py  subscriber.py
python/src/: __init__.py
python/test/: nodeDiscoveryPubs_TEST.py  nodeDiscoverySubs_TEST.py  options_TEST.py  pubSub_TEST.py  requester_TEST.py
src/: AddressInfo.cc  AddressInfo_TEST.cc  AdvertiseOptions.cc  AdvertiseOptions_TEST.cc  CIface.cc  CIface_TEST.cc  CMakeLists.txt  Clock.cc  Clock_TEST.cc  Discovery.cc  Discovery.hh  Discovery2_TEST.cc  DiscoveryOptions.cc  DiscoveryOptionsPrivate.hh  DiscoveryOptions_TEST.cc  DiscoveryPrivate.cc  Discovery_TEST.cc  HandlerStorage.cc  HandlerStorage_TEST.cc  Helpers.cc  Helpers_TEST.cc  MessageInfo.cc  MessageInfo_TEST.cc  NetUtils.cc  NetUtils_TEST.cc  Node.cc  NodeOptions.cc  NodeOptionsPrivate.hh  NodeOptions_TEST.cc  NodePrivate.cc  NodePrivate.hh  NodePrivate_TEST.cc  NodeShared.cc  NodeSharedPrivate.hh  NodeShared_TEST.cc  Node_TEST.cc  Packet.cc  Packet_TEST.cc  Publisher.cc  Publisher_TEST.cc  (+54 more)
src/cmd/: CMakeLists.txt  cmdtransport.rb.in  gz.cc  gz.hh  gz_TEST.cc  gz_src_TEST.cc  ign.cc  ign.hh  ign_TEST.cc  ign_src_TEST.cc  service_main.cc  topic_main.cc  transport.bash_completion.sh
src/ign/: CMakeLists.txt  transport_main.cc
test/: BUILD.bazel  CMakeLists.txt  test_config.h.in  test_config.hh.in  test_utils.hh
test/config/: gz_zenoh_invalid_config.json5  gz_zenoh_test_config.json5
test/integration/: CMakeLists.txt  authPubSub.cc  authPubSubSubscriberInvalid_aux.cc  beaconTest.cc  callback_scope_TEST.cc  deprecated_TEST.cc  fastPub_aux.cc  pub_aux.cc  pub_aux_throttled.cc  same_process_services.cc  scopedTopic.cc  scopedTopicSubscriber_aux.cc  statistics.cc  sub_aux.cc  twoProcessesEmptyTopic_aux.cc  twoProcessesPubSub.cc  twoProcessesPubSubSubscriber_aux.cc  twoProcessesPublisher_aux.cc  twoProcessesSrvCall.cc  twoProcessesSrvCallReplierIncreasing_aux.cc  twoProcessesSrvCallReplier_aux.cc  twoProcessesSrvCallStress.cc  twoProcessesSrvCallSync.cc  twoProcessesSrvCallSync1.cc  twoProcessesSrvCallSync2.cc  twoProcessesSrvCallWithoutInput.cc  twoProcessesSrvCallWithoutInputReplierIncreasing_aux.cc  twoProcessesSrvCallWithoutInputReplier_aux.cc  twoProcessesSrvCallWithoutInputStress.cc  twoProcessesSrvCallWithoutInputSync1.cc  twoProcessesSrvCallWithoutOutput.cc  twoProcessesSrvCallWithoutOutputReplierIncreasing_aux.cc  twoProcessesSrvCallWithoutOutputReplier_aux.cc  twoProcessesSrvCallWithoutOutputStress.cc  twoProcsPubSub.cc  twoProcsPubSubSingleSubscriber_aux.cc  twoProcsPubSubStats.cc  twoProcsPubSubSubscriber_aux.cc  twoProcsPublisher_aux.cc  twoProcsSrv.cc  (+19 more)
test/msg/: CMakeLists.txt  int.proto
test/msgs/: String.proto
test/performance/: CMakeLists.txt
test/regression/: CMakeLists.txt  deprecated.cc
tools/: CMakeLists.txt  check_test_ran.py  code_check.sh  cpplint.py  ign_TEST.cc
tools/record/: CMakeLists.txt
(+315 files in other folders)
