## MODULE.bazel
module(
    name = "gz-transport",
    repo_name = "org_gazebosim_gz-transport",
)

bazel_dep(name = "cppzmq", version = "4.10.0.bcr.1")
bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "libuuid", version = "2.39.3.bcr.1")
bazel_dep(name = "libzmq", version = "4.3.5.bcr.3")
bazel_dep(name = "protobuf", version = "29.4", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "sqlite3", version = "3.49.1")

# Gazebo Dependencies
bazel_dep(name = "rules_gazebo", version = "0.0.6")
bazel_dep(name = "gz-common")
bazel_dep(name = "gz-math")
bazel_dep(name = "gz-utils")
bazel_dep(name = "gz-msgs")

archive_override(
    module_name = "gz-common",
    strip_prefix = "gz-common-gz-common7",
    urls = ["https://github.com/gazebosim/gz-common/archive/refs/heads/gz-common7.tar.gz"],
)

archive_override(
    module_name = "gz-math",
    strip_prefix = "gz-math-main",
    urls = ["https://github.com/gazebosim/gz-math/archive/refs/heads/main.tar.gz"],
)

archive_override(
    module_name = "gz-utils",
    strip_prefix = "gz-utils-main",
    urls = ["https://github.com/gazebosim/gz-utils/archive/refs/heads/main.tar.gz"],
)

archive_override(
    module_name = "gz-msgs",
    strip_prefix = "gz-msgs-main",
    urls = ["https://github.com/gazebosim/gz-msgs/archive/refs/heads/main.tar.gz"],
)
