<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-transport14</name>
  <version>14.0.0</version>
  <description>Gazebo Transport: Provides fast and efficient asynchronous message passing, services, and data logging.</description>
  <maintainer email="caguero@openrobotics.org">Carlos Agüero</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-transport</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake4</build_depend>

  <depend>gz-math8</depend>
  <depend>gz-msgs11</depend>
  <depend>gz-tools2</depend>
  <depend>gz-utils3</depend>
  <depend>libsqlite3-dev</depend>
  <depend>libzmq3-dev</depend>
  <depend>pkg-config</depend>
  <depend>protobuf-dev</depend>
  <depend>pybind11-dev</depend>
  <depend>python3-dev</depend>
  <depend>python3-psutil</depend>
  <depend>python3-pytest</depend>
  <depend>uuid</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
